<resources>
    <string name="app_name">SafeNest</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="Sample_text">In case of emergency, keep telling family members to contact me.</string>
    <string name="guard">GUARD</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="my_map_api_key">AIzaSyBI867ri759l_e4BFOCqglhA311jaZ62uY</string>
    <string name="default_web_client_id">430775218671-mk1pij58uk8psdkct74fq2basvsj0ksk.apps.googleusercontent.com</string>
</resources>