<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <TextView
        android:id="@+id/head_text_guard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        android:layout_marginTop="56dp"
        app:cardBackgroundColor="@color/pink"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/head_text_guard"
        tools:layout_editor_absoluteX="32dp" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:text="@string/Sample_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/sos_img"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintTop_toBottomOf="@+id/text_sos"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/sos_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@+id/pink_card"
        app:layout_constraintEnd_toEndOf="@+id/pink_card"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo1" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardBackgroundColor="@color/green"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:text="@string/Sample_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guard_img"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintTop_toBottomOf="@+id/text_guard"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/guard_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="10dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@+id/green_card"
        app:layout_constraintEnd_toEndOf="@+id/green_card"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>